# warning32_repro

./: dune-project  package2.opam
lib/: dune  warning32_repro.ml
package2/: dune  package2.ml
test/: dune
